Add wifi library

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ build_flags=
 src_build_flags=!python git_rev_macro.py
 lib_ldf_mode=chain+
 lib_deps =
+    WiFi@1.0
 monitor_speed = 115200
 
 [env:esp32]
