--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ src_build_flags=!python git_rev_macro.py
 lib_ldf_mode=chain+
 lib_deps =
     WiFi@1.0
+    OSC@956962455a
 monitor_speed = 115200
 
 [env:esp32]
@@ -26,4 +27,3 @@ lib_ldf_mode=${common.lib_ldf_mode}
 build_flags = ${common.build_flags}
 src_build_flags = ${common.src_build_flags}
 monitor_speed = ${common.monitor_speed}
-
