Update OSC version

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ src_build_flags=!python git_rev_macro.py
 lib_ldf_mode=chain+
 lib_deps =
     WiFi@1.0
-    OSC@956962455a
+    cnmat/OSC@0.0.0-alpha+sha.41b44981e3
     FastLED@3.3.2
 monitor_speed = 115200
 
